# Pc-MCP

./: .gitignore  ARCHITECTURE.md  CHATGPT_MCP_GUIDE.md  FILESYSTEM_TERMINAL_GUIDE.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_FILESYSTEM_TERMINAL.md  IMPLEMENTATION_SUMMARY.md  ITERATIVE_WORKFLOW_GUIDE.md  OAUTH_GUIDE.md  OPENAI_COMPATIBILITY_SUMMARY.md  OPENAI_INTEGRATION.md  README.md  README_CADSLICERPRINTER.md  REDESIGN_SUMMARY.md  VERIFICATION.md  WEB_INTERFACE_GUIDE.md  cadslicerprinter.service  check_openai_requirements.py  cloudflared-pcmcp.service  example_workflow.py  install-autostart.sh  pyproject.toml  test_filesystem_terminal.py  test_iterative_workflow.py  test_mcp_integration.py  test_redesign.py  test_stdio.py  test_stdio_transport.py
src/: __init__.py  oauth_auth.py  server.py
src/config/: __init__.py  settings.py
src/services/: __init__.py  cad_service.py  filesystem_service.py  printer_service.py  slicer_service.py  terminal_service.py  workspace_service.py
src/static/: app.js  index.html  styles.css
src/tools/: __init__.py  cad_tools.py  filesystem_tools.py  printer_tools.py  slicer_tools.py  terminal_tools.py  workspace_tools.py
src/utils/: __init__.py  command.py  paths.py  validation.py
