[project]
name = "cad-slicer-printer-mcp"
version = "0.2.0"
description = "MCP server for iterative 3D model design, slicing, and printing - Redesigned for maximum efficiency"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
