[project]
name = "cad-slicer-printer-mcp"
version = "0.2.1"
description = "MCP server for iterative 3D model design, slicing, printing, filesystem operations, and terminal commands"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
